Fixed wordBreak on execises

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,4 +9,6 @@
     height: 5rem;
 }
 
-
+.wordWrap {
+    word-wrap: normal;
+}
